fix z-index of moreInfo-button and preview-background

--- a/src/styles/MainPage.css
+++ b/src/styles/MainPage.css
@@ -88,7 +88,6 @@
     gap: 4px;
     font-weight: 900;
     cursor: default;
-    z-index: 1;
     font-size: 0.7rem;
     text-shadow: 0;
     cursor: pointer;
